--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             -moz-appearance: textfield;
         }
     </style>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
 </head>
 
 <body>
